@@ -28,7 +28,6 @@ import org.ethereum.util.RLPList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Immutable representation of an RSK Federation member.
@@ -91,7 +90,7 @@ public final class FederationMember {
     }
 
     public static List<FederationMember> getFederationMembersFromKeys(List<BtcECKey> pks) {
-        return pks.stream().map(FederationMember::getFederationMemberFromKey).collect(Collectors.toList());
+        return pks.stream().map(FederationMember::getFederationMemberFromKey).toList();
     }
 
     public BtcECKey getBtcPublicKey() {
@@ -110,24 +109,20 @@ public final class FederationMember {
     }
 
     public ECKey getPublicKey(KeyType keyType) {
-        switch (keyType) {
-            case RSK:
-                return getRskPublicKey();
-            case MST:
-                return getMstPublicKey();
-            case BTC:
-            default:
-                return ECKey.fromPublicOnly(btcPublicKey.getPubKey());
-        }
+        return switch (keyType) {
+            case RSK -> getRskPublicKey();
+            case MST -> getMstPublicKey();
+            default -> ECKey.fromPublicOnly(btcPublicKey.getPubKey());
+        };
     }
 
     @Override
     public String toString() {
         return String.format(
-                "<BTC-%s, RSK-%s, MST-%s> federation member",
-                ByteUtil.toHexString(btcPublicKey.getPubKey()),
-                ByteUtil.toHexString(rskPublicKey.getPubKey()),
-                ByteUtil.toHexString(mstPublicKey.getPubKey())
+            "<BTC-%s, RSK-%s, MST-%s> federation member",
+            ByteUtil.toHexString(btcPublicKey.getPubKey()),
+            ByteUtil.toHexString(rskPublicKey.getPubKey()),
+            ByteUtil.toHexString(mstPublicKey.getPubKey())
         );
     }
 
@@ -153,9 +148,9 @@ public final class FederationMember {
         // Can use java.util.Objects.hash since both BtcECKey and ECKey have
         // well-defined hashCode(s).
         return Objects.hash(
-                btcPublicKey,
-                rskPublicKey,
-                mstPublicKey
+            btcPublicKey,
+            rskPublicKey,
+            mstPublicKey
         );
     }
 
@@ -186,6 +181,7 @@ public final class FederationMember {
         BtcECKey btcKey = BtcECKey.fromPublicOnly(btcKeyData);
         ECKey rskKey = ECKey.fromPublicOnly(rskKeyData);
         ECKey mstKey = ECKey.fromPublicOnly(mstKeyData);
+
         return new FederationMember(btcKey, rskKey, mstKey);
     }
 }
